objects/Account.object
<CustomObject>
    <fields>
        <fullName>Total_opportunit_s_li_es__c</fullName>
        <inlineHelpText>Ce champ somme l&apos;ensemble des montants des opportunités liées à ce compte</inlineHelpText>
        <label>Versement compte N</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Taxe</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Exercice_de_collecte__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Conclu</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tranche_d_effectif__c</fullName>
        <label>Tranche d&apos;effectif</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>De 0 à 9</fullName>
                </value>
                <value>
                    <fullName>De 10 à 49</fullName>
                </value>
                <value>
                    <fullName>De 50 à 249</fullName>
                </value>
                <value>
                    <fullName>De 250 à 499</fullName>
                </value>
                <value>
                    <fullName>De 500 à 999</fullName>
                </value>
                <value>
                    <fullName>De 1000 à 1999</fullName>
                </value>
                <value>
                    <fullName>De 2000 à 4999</fullName>
                </value>
                <value>
                    <fullName>De 5000 à 9999</fullName>
                </value>
                <value>
                    <fullName>10 000 et plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tranche_de_CA_Tranche_de_CA_entit__c</fullName>
        <label>Tranche de CA / Tranche de CA entité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Moins de 0,5 million d&apos;euros</fullName>
                </value>
                <value>
                    <fullName>De 0,5 a moins de 1 M€</fullName>
                </value>
                <value>
                    <fullName>De 1 M€ a moins de 2 M€</fullName>
                </value>
                <value>
                    <fullName>De 2 M€ a moins de 5 M€</fullName>
                </value>
                <value>
                    <fullName>De 5 M€ a moins de 10 M€</fullName>
                </value>
                <value>
                    <fullName>De 10 M€ a moins de 20 M€</fullName>
                </value>
                <value>
                    <fullName>De 20 M€ a moins de 50 M€</fullName>
                </value>
                <value>
                    <fullName>De 50 M€ a moins de 100 M€</fullName>
                </value>
                <value>
                    <fullName>De 100 M€ a moins de 200 M€</fullName>
                </value>
                <value>
                    <fullName>200 M€ ou plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tranche_de_CA_du_groupe__c</fullName>
        <label>Tranche de CA du groupe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Moins de 0,5 million d&apos;euros</fullName>
                </value>
                <value>
                    <fullName>De 0,5 a moins de 1 M€</fullName>
                </value>
                <value>
                    <fullName>De 1 M€ a moins de 2 M€</fullName>
                </value>
                <value>
                    <fullName>De 2 M€ a moins de 5 M€</fullName>
                </value>
                <value>
                    <fullName>De 5 M€ a moins de 10 M€</fullName>
                </value>
                <value>
                    <fullName>De 10 M€ a moins de 20 M€</fullName>
                </value>
                <value>
                    <fullName>De 20 M€ a moins de 50 M€</fullName>
                </value>
                <value>
                    <fullName>De 50 M€ a moins de 100 M€</fullName>
                </value>
                <value>
                    <fullName>De 100 M€ a moins de 200 M€</fullName>
                </value>
                <value>
                    <fullName>200 M€ ou plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tranche_effectif_groupe__c</fullName>
        <label>Tranche effectif groupe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>De 0 à 9</fullName>
                </value>
                <value>
                    <fullName>De 10 à 49</fullName>
                </value>
                <value>
                    <fullName>De 50 à 249</fullName>
                </value>
                <value>
                    <fullName>De 250 à 499</fullName>
                </value>
                <value>
                    <fullName>De 500 à 999</fullName>
                </value>
                <value>
                    <fullName>De 1000 à 1999</fullName>
                </value>
                <value>
                    <fullName>De 2000 à 4999</fullName>
                </value>
                <value>
                    <fullName>De 5000 à 9999</fullName>
                </value>
                <value>
                    <fullName>10 000 et plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tranche_verseur__c</fullName>
        <label>Niveau de partenariat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_d_tablissement__c</fullName>
        <label>Type d&apos;établissement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Direction Régionale</fullName>
                </value>
                <value>
                    <fullName>Etablissement Secondaire</fullName>
                </value>
                <value>
                    <fullName>Holding-Maison Mère Groupe</fullName>
                </value>
                <value>
                    <fullName>Siège</fullName>
                </value>
                <value>
                    <fullName>Siège Europe</fullName>
                </value>
                <value>
                    <fullName>Siège France</fullName>
                </value>
                <value>
                    <fullName>Siège Monde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Util_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Compte</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Versement_consolid_par_gorupe__c</fullName>
        <label>Versements groupe N</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Versements_compte_N_1__c</fullName>
        <label>Versements compte N-1</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Taxe</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Conclu</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Exercice_de_collecte__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Versements_compte_N_1_old__c</fullName>
        <description>Versement taxe du compte sur l&apos;exercice N-1</description>
        <inlineHelpText>Versement taxe du compte sur l&apos;exercice N-1</inlineHelpText>
        <label>Versements compte N-1 (abandonné)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Versements_compte_N_2__c</fullName>
        <label>Versements compte N-2</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Taxe</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Conclu</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Exercice_de_collecte__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Versements_compte_N_2_old__c</fullName>
        <description>Versement taxe du compte sur l&apos;exercice N-2</description>
        <inlineHelpText>Versement taxe du compte sur l&apos;exercice N-2</inlineHelpText>
        <label>Versements compte N-2 (abandonné)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Versements_groupe_N_1__c</fullName>
        <description>Versements Consolidés Groupe Exercice N-1</description>
        <inlineHelpText>Versements Consolidés Groupe Exercice N-1</inlineHelpText>
        <label>Versements groupe N-1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Versements_groupe_N_2__c</fullName>
        <description>Versements Consolidés Groupe Exercice N-2</description>
        <inlineHelpText>Versements Consolidés Groupe Exercice N-2</inlineHelpText>
        <label>Versements groupe N-2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zone_Commentaire_Fundraising__c</fullName>
        <label>Zone Commentaire Fundraising</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>type_Cabinets_r_f_rents__c</fullName>
        <description>Ce champ permet de sélectionner les entreprises intervenants dans le dispositif carrière</description>
        <label>Type Cabinets référents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Associations</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Outplacement</fullName>
                </value>
                <value>
                    <fullName>Recrutement</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>x18caracteres__c</fullName>
        <description>Id Salesforce sur 18 caractères</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Id Salesforce sur 18 caractères</inlineHelpText>
        <label>x18caracteres</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Tous les comptes</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Mes_comptes_Cr_s_FLA</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>SIRET__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>flagn</value>
        </filters>
        <label>Mes comptes - Créés FLA</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>SIRET__c</columns>
        <filterScope>Mine</filterScope>
        <label>Mes comptes</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Recherche_par_D_partements</fullName>
        <columns>ID_FEG__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>SIRET__c</columns>
        <columns>Libell_du_groupe__c</columns>
        <columns>Adresse_Rue__c</columns>
        <columns>Rue_2__c</columns>
        <columns>Ligne_3__c</columns>
        <columns>Code_Postal__c</columns>
        <columns>Adresse_Ville__c</columns>
        <columns>Adresse_Etat1__c</columns>
        <columns>CodePays__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>GE</value>
        </filters>
        <filters>
            <field>Code_Postal__c</field>
            <operation>startsWith</operation>
            <value>92</value>
        </filters>
        <label>Recherche par Départements</label>
        <language>fr</language>
        <sharedTo>
            <group>Vues_Employabilite</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Etat_ObligatoireCourante</fullName>
        <active>true</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
and( 
OR 
( 
 CodePays__c  = &quot;ÉTATS-UNIS&quot; , 
 CodePays__c  = &quot;CANADA&quot; 
), 
isblank( Adresse_Etat1__c  ) 
)
)</errorConditionFormula>
        <errorDisplayField>Adresse_Etat1__c</errorDisplayField>
        <errorMessage>Le champs Etat est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Etat_ObligatoireFacturation</fullName>
        <active>false</active>
        <errorConditionFormula>and(   
    OR
    (
       Adresse_Pays_WF__c  =  &quot;ÉTATS-UNIS&quot; , 
       Adresse_Pays_WF__c  = &quot;CANADA&quot;
    ),
    isblank(Adresse_facturation_Etat1__c )
)</errorConditionFormula>
        <errorDisplayField>Adresse_facturation_Etat1__c</errorDisplayField>
        <errorMessage>Le champs Etat doit être obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte01_Etat_ObligatoireCourante</fullName>
        <active>true</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
and( 
OR 
( 
  Adresse_Cour_Pays_WF__c   = &quot;ÉTATS-UNIS&quot; , 
  Adresse_Cour_Pays_WF__c  = &quot;CANADA&quot; 
), 
isblank( Adresse_Etat1__c  ) 
)
)</errorConditionFormula>
        <errorDisplayField>Adresse_Etat1__c</errorDisplayField>
        <errorMessage>Le champ Etat est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte02_Etat_ObligatoireFacturation</fullName>
        <active>true</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( and(   
    OR
    (
       Adresse_Pays_WF__c  =  &quot;ÉTATS-UNIS&quot; , 
       Adresse_Pays_WF__c  = &quot;CANADA&quot;
    ),
    isblank(Adresse_facturation_Etat1__c )
)
)</errorConditionFormula>
        <errorDisplayField>Adresse_facturation_Etat1__c</errorDisplayField>
        <errorMessage>Le champs Etat doit être obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte03_RegionVsEtat_Facturation</fullName>
        <active>false</active>
        <description>Cette règle de validation permet de d&apos;empêcher de saisir la région et l&apos;état au même temps dans l&apos;adresse de facturation.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(  Adresse_facturation_d_partement__c   &lt;&gt; &quot;&quot;,  Adresse_facturation_Etat1__c &lt;&gt; &quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Vérifiez les champs Région et  Etat dans l&apos;adresse de facturation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte04_SIRET_Controle_integrite</fullName>
        <active>true</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
AND(
( LEN(SIRET__c) &lt;&gt; 14 ||

((VALUE(MID(SIRET__c,1,9)) &lt;&gt; 356000000) &amp;&amp; (MOD(IF(VALUE(MID(SIRET__c, 1, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 1, 1))*2,9)) +
VALUE(MID(SIRET__c, 2, 1))+
IF(VALUE(MID(SIRET__c, 3, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 3, 1))*2,9))+
VALUE(MID(SIRET__c, 4, 1))+
IF(VALUE(MID(SIRET__c, 5, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 5, 1))*2,9))+
VALUE(MID(SIRET__c, 6, 1))+
IF(VALUE(MID(SIRET__c, 7, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 7, 1))*2,9))+
VALUE(MID(SIRET__c, 8, 1))+
IF(VALUE(MID(SIRET__c, 9, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 9, 1))*2,9))+
VALUE(MID(SIRET__c, 10, 1))+
IF(VALUE(MID(SIRET__c, 11, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 11, 1))*2,9))+
VALUE(MID(SIRET__c, 12, 1))+
IF(VALUE(MID(SIRET__c, 13, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 13, 1))*2,9))+
VALUE(MID(SIRET__c, 14, 1)),10) &lt;&gt; 0))
),
CodePays__r.Code_Pays__c = &quot;FRA&quot;
)</errorConditionFormula>
        <errorDisplayField>SIRET__c</errorDisplayField>
        <errorMessage>Vérifiez les informations saisies sur ce champ</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte05_RegionVsEtat_Courante</fullName>
        <active>false</active>
        <description>Cette règle de validation permet de d&apos;empêcher de saisir la région et l&apos;état au même temps dans l&apos;adresse courante.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(    Departement__c    &lt;&gt; &quot;&quot;,    Adresse_Etat1__c    &lt;&gt; &quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Vérifiez les champs Région et Etat dans l&apos;adresse courante</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte06_Pays_ObligatoireCourante</fullName>
        <active>true</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
(ISNEW())
&amp;&amp; 
( 
AND( 

ISBLANK(  CodePays__c  ),
$User.LastName &lt;&gt; &apos;Interface&apos;  
)


)</errorConditionFormula>
        <errorDisplayField>CodePays__c</errorDisplayField>
        <errorMessage>Le champ Pays est obligatoire.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte07_Pays_ObligatoireFacturation</fullName>
        <active>true</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND( 
OR 
( 
 Adresse_facturation_Code_Postal__c  &lt;&gt; &quot;&quot;, 
 Adresse_facturation_d_partement__c  &lt;&gt; &quot;&quot;, 
 Adresse_facturation_Etat1__c  &lt;&gt; &quot;&quot;, 
 Adresse_facturation_R_gion__c  &lt;&gt; &quot;&quot;, 
 Adresse_Facturation_Rue__c  &lt;&gt; &quot;&quot;, 
 Adresse_facturation_ville__c  &lt;&gt; &quot;&quot;, 
 Adresse_facturation_Ligne_2__c  &lt;&gt; &quot;&quot;, 
 Adresse_facturation_Ligne_3__c &lt;&gt; &quot;&quot; 
), 
ISBLANK( Adresse_facturation_Pays__c ) 
)
)</errorConditionFormula>
        <errorDisplayField>Adresse_facturation_Pays__c</errorDisplayField>
        <errorMessage>Le champ Pays est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte08_NAF_Secteur_dac_Obl</fullName>
        <active>true</active>
        <description>Cette règle de validation permet de vérifier si l&apos;un des champs &quot;NAF&quot; et &quot;Secteur d&apos;activité&quot; est renseigné.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND 
( 
ISPICKVAL(Industry, &quot;&quot;), 
CodeAPE__c = &quot;&quot; ,
Name&lt;&gt;&quot;Formation Initiale&quot;,
Name&lt;&gt;&quot;Sans organisation connue&quot;,
Name&lt;&gt;&quot;Transition professionnelle&quot;
) 
)</errorConditionFormula>
        <errorMessage>Vérifiez les champs NAF ou Secteur d&apos;activité</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte09_Ville_Obligatoire</fullName>
        <active>true</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
(ISNEW())
&amp;&amp;
( 
AND( 

ISBLANK(     Adresse_Ville__c ), 
$User.LastName&lt;&gt; &apos;Interface&apos;    
)
)</errorConditionFormula>
        <errorDisplayField>Adresse_Ville__c</errorDisplayField>
        <errorMessage>Le champ Ville est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte10_ville_courante_sans_chiffres</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNUMBER(Adresse_Ville__c), OR(CONTAINS(Adresse_Ville__c, &quot;0&quot;),CONTAINS(Adresse_Ville__c, &quot;1&quot;),CONTAINS(Adresse_Ville__c, &quot;2&quot;),CONTAINS(Adresse_Ville__c, &quot;3&quot;),CONTAINS(Adresse_Ville__c, &quot;4&quot;),CONTAINS(Adresse_Ville__c, &quot;5&quot;),CONTAINS(Adresse_Ville__c, &quot;6&quot;),CONTAINS(Adresse_Ville__c, &quot;7&quot;),CONTAINS(Adresse_Ville__c, &quot;8&quot;),CONTAINS(Adresse_Ville__c, &quot;9&quot;)))</errorConditionFormula>
        <errorMessage>Le champ adresse courante: Ville ne doit pas contenir de chiffres !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte11_ad_factu_ville_sans_chiffres</fullName>
        <active>true</active>
        <description>Empêcher la saisie de chiffre dans le champ adresse facturation: ville</description>
        <errorConditionFormula>OR( ISNUMBER(Adresse_facturation_ville__c), OR(CONTAINS(Adresse_facturation_ville__c, &quot;0&quot;),CONTAINS(Adresse_facturation_ville__c, &quot;1&quot;),CONTAINS(Adresse_facturation_ville__c, &quot;2&quot;),CONTAINS(Adresse_facturation_ville__c, &quot;3&quot;),CONTAINS(Adresse_facturation_ville__c, &quot;4&quot;),CONTAINS(Adresse_facturation_ville__c, &quot;5&quot;),CONTAINS(Adresse_facturation_ville__c, &quot;6&quot;),CONTAINS(Adresse_facturation_ville__c, &quot;7&quot;),CONTAINS(Adresse_facturation_ville__c, &quot;8&quot;),CONTAINS(Adresse_facturation_ville__c, &quot;9&quot;)))</errorConditionFormula>
        <errorMessage>Le champ Adresse facturation: ville ne doit pas contenir de chiffres !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte_CreationCompteFictif</fullName>
        <active>true</active>
        <description>interdiction de créer un compte &quot;Formation Initiale&quot;, &quot;Sans organisation connue&quot;, &quot;Transition professionnelle&quot;</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
OR( 
AND(
 ISNEW(),Name=&quot;Formation Initiale&quot;), 
AND(
 ISNEW(),Name=&quot;Sans organisation connue&quot;),
AND(
 ISNEW(),Name=&quot;Transition professionnelle&quot;) 
)
)</errorConditionFormula>
        <errorMessage>interdiction de créer un compte &quot;Formation Initiale&quot;, &quot;Sans organisation connue&quot;, &quot;Transition professionnelle&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte_NomDuCompte</fullName>
        <active>true</active>
        <description>Empêcher la modification du nom des comptes &quot;Formation Initiale&quot; et &quot;sans organisation connue&quot;</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( AND(
OR(
PRIORVALUE(Name)=&quot;Formation Initiale&quot;,
PRIORVALUE(Name)=&quot;Sans organisation connue&quot;
),
ISCHANGED(Name)
)
)</errorConditionFormula>
        <errorMessage>Il est impossible de modifier le nom de compte</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Compte_NomDuCompteBis</fullName>
        <active>true</active>
        <description>Empêcher la duplication des comptes Formation Initiale et sans organisation connue ou transition professionnelle.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( AND
(
OR
(
Name=&quot;Formation Initiale&quot;,
Name=&quot;Sans organisation connue&quot;,
Name=&quot;Transition professionnelle&quot;
)
,
ISCHANGED(Name)
)
)</errorConditionFormula>
        <errorMessage>Il est impossible de modifier le nom de compte en Formation Initiale ou Sans organisation connue ou Transition professionnelle</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RegionVsEtat</fullName>
        <active>false</active>
        <description>Cette règle de validation permet de d&apos;empêcher de saisir la région et l&apos;état au même temps</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(    D_partement__pc     &lt;&gt; &quot;&quot;,    Etat__pc  &lt;&gt; &quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Vérifiez les champs Région et Etat</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SIRET_Controle_integrite</fullName>
        <active>false</active>
        <errorConditionFormula>LEN(SIRET__c) &lt;&gt; 14 ||

((VALUE(MID(SIRET__c,1,9)) &lt;&gt; 356000000) &amp;&amp; (MOD(IF(VALUE(MID(SIRET__c, 1, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 1, 1))*2,9)) +
VALUE(MID(SIRET__c, 2, 1))+
IF(VALUE(MID(SIRET__c, 3, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 3, 1))*2,9))+
VALUE(MID(SIRET__c, 4, 1))+
IF(VALUE(MID(SIRET__c, 5, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 5, 1))*2,9))+
VALUE(MID(SIRET__c, 6, 1))+
IF(VALUE(MID(SIRET__c, 7, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 7, 1))*2,9))+
VALUE(MID(SIRET__c, 8, 1))+
IF(VALUE(MID(SIRET__c, 9, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 9, 1))*2,9))+
VALUE(MID(SIRET__c, 10, 1))+
IF(VALUE(MID(SIRET__c, 11, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 11, 1))*2,9))+
VALUE(MID(SIRET__c, 12, 1))+
IF(VALUE(MID(SIRET__c, 13, 1))=9, 9, MOD(VALUE(MID(SIRET__c, 13, 1))*2,9))+
VALUE(MID(SIRET__c, 14, 1)),10) &lt;&gt; 0))</errorConditionFormula>
        <errorDisplayField>SIRET__c</errorDisplayField>
        <errorMessage>Vérifiez les informations saisies sur ce champ</errorMessage>
    </validationRules>
</CustomObject>